# DOP

./: .gitignore
lab01/: README.md  presentation-quentin-surdez.typ
lab01/dop-python-quentin/: .gitignore
lab01/dop-python-quentin/backend/: pyproject.toml
lab01/dop-python-quentin/frontend/: package.json
lab02/: README.md  report.md
lab02/dop-python-quentin/: .gitignore  README.md  compose.yaml
lab02/dop-python-quentin/backend/: .dockerignore  Dockerfile  Dockerfile_lib  pyproject.toml
lab02/dop-python-quentin/frontend/: .dockerignore  package-lock.json  pnpm-lock.yaml
lab03/: README.md  report.md
lab03/dop-python-quentin/: .gitignore  Makefile  compose.yaml
lab03/dop-python-quentin/backend/: .dockerignore  Dockerfile  pyproject.toml
lab03/dop-python-quentin/backend/backend/: database.py  main.py  models.py  schemas.py
lab03/dop-python-quentin/frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.js
lab03/dop-python-quentin/frontend/src/: App.vue  main.ts
lab03/dop-python-quentin/frontend/src/components/: ProductManager.vue
lab06/: .dockerignore  .gitlab-ci.yml  Dockerfile  Dockerfile.gradle.test  README.md  build.gradle  checkstyle.xml  compose.yaml  deployment.yml  deployment.yml.simple  pom.xml  report.md
lab06/pipelines/: .gitlab-ci.yml.old  app-pipeline.yml  docker-pipeline.yml  quality-pipeline.yml
