[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Sinaf19",email = "quentinsurdez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "psycopg2-binary (>=2.9.10, <3.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.11,<0.116.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
